<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/DateTimePlus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/datetimeplus"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DateTimePlus" />

    <TextView
        android:id="@+id/TimeUnit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/time_unit"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <RadioGroup
        android:id="@+id/selectionBtns"
        android:layout_width="403dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:checkedButton="@id/hours"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TimeUnit">

        <RadioButton
            android:id="@+id/hours"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/days"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:text="@string/days"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/weeks"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:text="@string/weeks"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/months"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/months"
            android:textSize="16sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/valuetoadd"
        android:layout_width="124dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/value_to_add"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectionBtns" />

    <EditText
        android:id="@+id/valueToAddInput"
        android:layout_width="249dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@color/light_green"
        android:ems="10"
        android:inputType="numberSigned"
        android:padding="8dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/valuetoadd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/valuetoadd"
        app:layout_constraintTop_toBottomOf="@+id/selectionBtns" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="332dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:onClick="calculate"
        android:text="@string/calculate"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valuetoadd" />

    <TextView
        android:id="@+id/result"
        android:layout_width="76dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/results"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate_button" />

    <TextView
        android:id="@+id/resultsoutput"
        android:layout_width="299dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@color/light_gray"
        android:ems="10"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/result"
        app:layout_constraintTop_toBottomOf="@+id/calculate_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="400dp" />

    <TextView
        android:id="@+id/history"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/history"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="376dp" />

    <TextView
        android:id="@+id/historyspace"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:scrollbars="vertical"
        android:background="@color/light_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/clearAll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history" />

    <Button
        android:id="@+id/clearAll"
        android:layout_width="332dp"
        android:layout_height="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:onClick="clearAll"
        android:text="@string/clear_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/historyspace" />

</androidx.constraintlayout.widget.ConstraintLayout>